# gnome-shell-cast

./: .gitignore  .prettierignore  LICENSE  Makefile  NOTICE  README.md  eslint.config.mjs  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
daemon/: Cargo.toml  clippy.toml
daemon/src/: capture.rs  cast.rs  discovery.rs  http.rs  main.rs  pipeline.rs  session.rs  volume.rs
daemon/src/mirror/: channel.rs  crypto.rs  encoder.rs  messages.rs  mod.rs  rtcp.rs  rtp.rs  sender.rs
daemon/src/streaming/: channel.rs  mod.rs
daemon/src/streaming/openscreen/: NOTICE  messages.rs  mod.rs
data/: org.gnome.ShellCast.service.in
docs/: DEPENDENCIES.md
extension/gnome-shell-cast@oxygenws.com/: castMenu.js  daemon.js  errorDialog.js  extension.js  indicator.js  metadata.json  prefs.js  quickIndicator.js  setupDialog.js  stylesheet.css  volumeControl.js
extension/gnome-shell-cast@oxygenws.com/schemas/: org.gnome.shell.extensions.gnome-shell-cast.gschema.xml
po/: gnome-shell-cast@oxygenws.com.pot
scripts/: install.sh  release.sh  set-version.sh
