[package]
name = "gnome-shell-cast-daemon"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "Casts the GNOME desktop (screen or window) to Chromecast devices; controlled over D-Bus by the gnome-shell-cast extension"

[dependencies]
aes = "0.9"
anyhow = "1"
ashpd = { version = "0.13", default-features = false, features = ["screencast", "tokio"] }
ctr = "0.10"
env_logger = "0.11"
gstreamer = "0.25"
gstreamer-app = "0.25"
log = "0.4"
mdns-sd = "0.20"
parking_lot = "0.12"
rand = "0.10"
rust_cast = "0.21"
rustls = "0.23"
serde_json = "1"
tiny_http = "0.12"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "net",
    "process",
] }
zbus = { version = "5", default-features = false, features = ["tokio"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

cargo_common_metadata = "allow"
similar_names = "allow"
multiple_crate_versions = "allow"
option_option = "warn"
wildcard_imports = "warn"

# The daemon is largely a byte-exact port of Chromium's Cast Streaming
# (RTP/RTCP/crypto in src/mirror). There, slice indexing, intentional integer
# truncation and wrapping counter arithmetic are the correct expression of the
# wire format and match the reference implementation line for line; rewriting
# them as checked/`.get()` code would make the port *harder* to audit. These
# lints are therefore allowed rather than fought. Correctness-critical lints
# (unwrap/expect/panic, format args, the rustc groups) stay enforced below.
missing_docs_in_private_items = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
indexing_slicing = "allow"
arithmetic_side_effects = "allow"
float_arithmetic = "allow"
string_slice = "allow"
needless_pass_by_value = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"
# zbus `#[interface]` methods must be `async fn` even when they don't await.
unused_async = "allow"

## restrictions kept enforced
unseparated_literal_suffix = "warn"
needless_raw_strings = "warn"
semicolon_inside_block = "warn"
renamed_function_params = "warn"
unwrap_in_result = "warn"
assigning_clones = "warn"
if_then_some_else_none = "warn"
else_if_without_else = "warn"
impl_trait_in_params = "warn"
iter_over_hash_type = "warn"
# Would require exhaustive matches on `#[non_exhaustive]` external enums
# (gstreamer `MessageView`, mdns-sd `ServiceEvent`), which is impossible.
wildcard_enum_match_arm = "allow"
# Payload-type / port constants read naturally in decimal even in `|` exprs.
decimal_bitwise_operands = "allow"
uninlined_format_args = "deny"
unwrap_used = "deny"
panic = "deny"
expect_used = "deny"
